# engrapha

./: .gitignore  .meta.yml  404.html  LICENSE  README.md  index.html  llms.txt  logo.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  test.yml
api/diagrams/: index.html
api/notes/: index.html
assets/: copy-page-button.js
changelog/: index.html
contributing/: index.html
diagrams/architecture/: index.html
diagrams/c4/: index.html
diagrams/class/: index.html
diagrams/cloud/: index.html
diagrams/er/: index.html
diagrams/flowchart/: index.html
diagrams/git/: index.html
diagrams/network/: index.html
diagrams/overview/: index.html
diagrams/schema/: index.html
diagrams/sequence/: index.html
diagrams/stack/: index.html
diagrams/state-machine/: index.html
diagrams/timing/: index.html
docs/: changelog.md  contributing.md  getting-started.md  index.md  llms.txt  markdown.md  sitemap.md  themes.md  why-engrapha.md  why-paperforge.md
docs/api/: diagrams.md  notes.md
docs/diagrams/: architecture.md  c4.md  class.md  cloud.md  er.md  flowchart.md  git.md  network.md  overview.md  schema.md  sequence.md  stack.md  state-machine.md  timing.md
docs/examples/: assignment.md  engineering-notes.md  networking-notes.md  resume.md  thesis.md
docs/gallery/: architectures.md  er-diagrams.md  flowcharts.md  index.md  network-diagrams.md  (+3 more)
examples/: demo_comprehensive.py  demo_diagrams.py  demo_dsa.py  demo_engrapha_notes.py  demo_modular.py  demo_paperforge_notes.py  demo_pdfnotes.py  demo_themes.py  temp_chapter.py  temp_chapter2.py  temp_markdown.md
gallery/: index.html
getting-started/: index.html
markdown/: index.html
paperforge/: pyproject.toml
paperforge_diagrams/: README.md  architecture.py  base.py  c4.py  class_diagram.py  cloud.py  er_diagram.py  flowchart.py  git.py  layout.py  network.py  pyproject.toml  schema.py  sequence.py  shapes.py  stack.py  state_machine.py  theme.py  timing.py
paperforge_diagrams/tests/: test_base.py  test_class_diagram.py  test_er_diagram.py  test_flowchart.py  test_integration.py  test_layout.py  test_network.py  test_notes_upgrades.py  test_sequence.py  test_shapes.py  test_stack.py  test_state_machine.py  test_theme.py  test_timing.py
paperforge_notes/: README.md  cli.py  document.py  helpers.py  packet.py  palette.py  pyproject.toml
paperforge_notes/tests/: __init__.py  test_exports.py  test_markdown_compiler.py  test_math.py
search/: search_index.json
sitemap/: index.html
study_notes/: CA_Notes.py  CN_Assignment.py  JAVA_Assignment.py  ca_pyq.py  ca_unit1.py  ca_unit2.py  ca_unit3.py  ca_unit4.py  ca_unit5.py  cn_pyq.py  cn_unit1.py  cn_unit2.py  cn_unit3.py  cn_unit4.py  cn_unit5.py  dbms_notes.py  ic.py  ic_assignment.py  ic_pyq.py  java_mst.py  java_pyq.py  java_unit1.py  java_unit2.py  java_unit3.py  java_unit4.py  java_unit5.py  os_pyq.py  os_unit1.py  os_unit2.py  os_unit3.py  os_unit4.py  os_unit5.py  react_nextjs_tailwind_notes.py
themes/: index.html
why-engrapha/: index.html
why-paperforge/: index.html
(+25 files in other folders)
