[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperforge"
version = "0.1.0"
description = "Meta-package: installs paperforge-notes (full) and paperforge-diagrams"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "paperforge-notes[full]>=0.1.0",
    "paperforge-diagrams>=0.1.0",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["paperforge*"]
